# hams

./: README.md  develop.md  multi-host-networking.md
admin/: FatigueDown.sh  admin_daemon.py  archive_imagequery_frontend_client.py  auto_pilot.py  auto_pilot_frontend_client.py  auto_set_ip.py  basic_query.py  boat_imagequery_client.py  cluster_simple_dag.py  cluster_stock.py  cluster_stop_all.py  cluster_translation.py  echo-chain-reduce.py  echo-chain.py  echo_auto_pilot.py  echo_fatigue.py  echo_frontend_client.py  echo_imagequery.py  echo_stock.py  echo_translation.py  fatigue.py  fatigue_concurrent_client.py  fatigue_frontend_client.py  frontend.py  frontend_client.py  frontend_concurrent_client.py  frontend_local_test.py  frontend_local_version.py  host_list  imagequery.py  imagequery_concurrent_client.py  requirements.txt  sentiment.py  sentiment_client.py  sentiment_concurrent_client.py  setup.py  simple_dag.py  stock.py  stock_frontend_client.py
admin/hams_admin/: __init__.py  container_manager.py  exceptions.py  graph_parser.py  hams_admin.py  redis_client.py  version.py
admin/hams_admin/docker/: docker_container_manager.py
admin/hams_admin/rpc/: management_pb2_grpc.py  model_pb2_grpc.py  prediction_pb2.py  prediction_pb2_grpc.py  proxy_pb2_grpc.py
admin/hams_admin/test/: basic_query.py  cluster_simple_dag.py  cluster_stock.py  cluster_stop_all.py  cluster_translation.py  simple_dag.py  stock.py  stop_all.py  translation.py
applications/: build_puredag_docker_simpledag.sh  run_puredag_docker_simpledag.sh
applications/Fatigue/: dag_formatted_Fatigue  dag_formatted_echo
applications/auto_pilot/: dag_formatted  dag_formatted_echo
applications/echo-chain/: complex_dag  dag_description  dag_reduce_description  dag_simple_description  dag_stock_description
applications/grpc/app/: client.py  dag.py  prediction_pb2.py  prediction_pb2_grpc.py  server.py
applications/imagequery/: dag_formatted  dag_formatted_echo
applications/imagequery_echo_model/: dag_formatted
applications/prediction/: dag_formatted  dag_formatted_echo
applications/prediction/stock_generate/: SP500_Trends.csv  SP500_Trends_Sorted.csv  choices.py  generate.py  hit.py
applications/simpledag/: dag_description  dag_formatted  dag_formatted_example  simpledagPureDagDockerfile
applications/simpledag/container1/: PureDagDockerfile
applications/simpledag/container2/: Dockerfile
applications/simpledag/container3/: PureDagDockerfile
applications/simpledag/container4/: PureDagDockerfile
applications/simpledag/container5/: PureDagDockerfile
applications/translation/: dag_formatted  dag_formatted_echo
dockerfiles/: ProxyDockerfile  ProxyDockerfile_NDEBUG
frontend/: CMakeLists.txt  FindgRPC.cmake
frontend/src/: frontend.cpp  frontend.hpp  main.cpp  test.cpp
grpcclient/: Dockerfile
grpcclient/app/: echo_client.py  grpc_client.py  management_pb2.py  management_pb2_grpc.py  model_pb2_grpc.py
proxy/: .gitignore  CMakeLists.txt  Dockerfile  README.md
proxy/src/: ClientConn.cpp  ClientConn.hpp  Config.hpp  Dag.cpp  Dag.hpp  DownStreamConn.cpp  DownStreamConn.hpp  DownstreamGroup.cpp  DownstreamGroup.hpp  FailureHandler.cpp  FailureHandler.hpp  FakeModel.cpp  FakeSMR.cpp  FrontendConn.cpp  FrontendConn.hpp  Handler.cpp  Handler.hpp  Main.cpp  ModelConn.cpp  ModelConn.hpp  ModelState.hpp  OutputChecker.cpp  OutputChecker.hpp  Proxy.cpp  Proxy.hpp  Reducer.cpp  Reducer.hpp  ReqCache.cpp  ReqCache.hpp  UpstreamStatus.cpp  UpstreamStatus.hpp  common.hpp
proxy/src/obsolete/: FakeModelAsync.cpp  ReplicatedDownstream.cpp  ReplicatedDownstream.hpp
